[gd_scene load_steps=16 format=3 uid="uid://bnvijajkjcrg0"]

[ext_resource type="Script" uid="uid://c57ktqe1hji8t" path="res://NPCs/squid_guide/squid_guide.gd" id="1_hkvxg"]
[ext_resource type="Shader" uid="uid://bbfp0dk78k8rs" path="res://NPCs/npc_color.gdshader" id="1_lf365"]
[ext_resource type="Texture2D" uid="uid://bw1aakleqved6" path="res://player/SquidSheet.png" id="1_mfu14"]
[ext_resource type="FontFile" uid="uid://diajd0v5fbtv0" path="res://main/Daydream.ttf" id="4_abel2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hkvxg"]
resource_local_to_scene = true
shader = ExtResource("1_lf365")
shader_parameter/OLDCOLOR1 = Color(0.882353, 0.537255, 0.870588, 1)
shader_parameter/OLDCOLOR2 = Color(0.67451, 0.254902, 0.729412, 1)
shader_parameter/OLDCOLOR3 = Color(0.419608, 0.113725, 0.556863, 1)
shader_parameter/OLDCOLOR4 = Color(1, 0.827451, 0.929412, 1)
shader_parameter/OLDCOLOR5 = Color(0.866667, 0.768627, 0.227451, 1)
shader_parameter/OLDCOLOR6 = Color(0.662745, 0.490196, 0.0509804, 1)
shader_parameter/OLDCOLOR7 = Color(0.521569, 0.294118, 0.0235294, 1)
shader_parameter/OLDCOLOR8 = Color(0.952941, 1, 0.380392, 1)
shader_parameter/NEWCOLOR1 = Color(0, 0, 0, 1)
shader_parameter/NEWCOLOR2 = Color(0, 0, 0, 1)
shader_parameter/NEWCOLOR3 = Color(0, 0, 0, 1)
shader_parameter/NEWCOLOR4 = Color(0, 0, 0, 1)
shader_parameter/NEWCOLOR5 = Color(0, 0, 0, 1)
shader_parameter/NEWCOLOR6 = Color(0, 0, 0, 1)
shader_parameter/NEWCOLOR7 = Color(0, 0, 0, 1)
shader_parameter/NEWCOLOR8 = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf365"]
atlas = ExtResource("1_mfu14")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkvxg"]
atlas = ExtResource("1_mfu14")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_abel2"]
atlas = ExtResource("1_mfu14")
region = Rect2(64, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cijmo"]
atlas = ExtResource("1_mfu14")
region = Rect2(96, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwi5x"]
atlas = ExtResource("1_mfu14")
region = Rect2(0, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc0ae"]
atlas = ExtResource("1_mfu14")
region = Rect2(32, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv15m"]
atlas = ExtResource("1_mfu14")
region = Rect2(64, 36, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl17a"]
atlas = ExtResource("1_mfu14")
region = Rect2(96, 36, 32, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_tiq12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf365")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkvxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abel2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cijmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwi5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc0ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv15m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl17a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfu14"]
size = Vector2(196.25, 341.625)

[node name="SquidGuide" type="Node2D" node_paths=PackedStringArray("sprite", "label")]
script = ExtResource("1_hkvxg")
sprite = NodePath("AnimatedSprite2D")
label = NodePath("Label")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_hkvxg")
sprite_frames = SubResource("SpriteFrames_tiq12")
autoplay = "default"
frame_progress = 0.989703

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -57.05)
shape = SubResource("RectangleShape2D_mfu14")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 16.0
offset_top = -161.0
offset_right = 172.0
offset_bottom = -16.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_abel2")
theme_override_font_sizes/font_size = 13
vertical_alignment = 2
autowrap_mode = 3

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
